@startuml test
skinparam classAttributeIconSize 0
class CLIENTS <<table1>> {
-id : int
-secret : string
-name : string
-active : bool
-short_description : string
-full_description : text
-logo_url : string
-url : string
-dpo : string
-technical_contact : string
-commercial_contact : string
}
class CLIENTS_GRANTS <<table2>> {
-id : int
-client_id : int
-perms : longtext
-branch_id : int
' champ précédent au format json (concerne la gestion du planning des équipes,
' la vente des boissons, l'envoie de newsletter, promotion de la salle...)
}
class BRANCHES <<table4>> {
-id : int
-active : string
-zipcode : int
-client_id : int
-name : string
}
class USERS <<table5>> {
-id : int
-firstname : string
-lastname : string
-email : string
-password : string
-role : string 
' il y a 4 roles (tech de l'Orange bleue qui est notre client,
' client (les clients de l'Orange bleue), structure (les salles de sport), personne lambda)
-manage : string
' gère une salle de sport
-owns : string
' est le client de l'Orange bleue (si manage est vide)
}

CLIENTS "1" -- "1" CLIENTS_GRANTS
BRANCHES "0..*" -- "1" CLIENTS_GRANTS
CLIENTS "1" -- "1" USERS
BRANCHES "1" -- "1" USERS

hide <<table1>> circle
hide <<table2>> circle
hide <<table4>> circle
hide <<table5>> circle

@enduml
